feixed issue with z-index making hoer not work for icons

--- a/styles.css
+++ b/styles.css
@@ -28,13 +28,13 @@ header {
   display: flex;
   justify-content: center;
   box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.25);
+  z-index: 1;
 }
 
 main {
   background-color: #dae2eb;
   flex: 1;
   padding: 20px;
-  z-index: -1;
 }
 
 main h1 {
